feat: date range search implemented